# kirigami

./: .dockerignore  .env.dist  .env.example  .fastapicloudignore  .gitignore  404.html  Agents.md  CONTRIBUTING.md  Caddyfile  FASTAPI.md  LICENSE  README.md  Untitled.ipynb  deploy.sh  discourse_api_fetcher.py  discourse_data_summarizer.py  docker-compose.yml  flake.nix  index.html  kirigami-vision-author-flow.excalidraw  mise.toml  mkdocs.yml  pyproject.toml  search.json  sitemap.xml  zensical.toml
.github/workflows/: docs.yml  fastapicloud-deploy.yml  release.yml
apps/web/: .env.example  .prettierignore  .prettierrc.mjs  eslint.config.mjs  next.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.mjs
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/how-it-works/: page.tsx
apps/web/app/topics/: page.test.tsx  page.tsx  topic-view.test.ts  topic-view.tsx
apps/web/app/topics/[topicId]/: page.tsx  topic-view.tsx
apps/web/components/: brand-logo.tsx  conversation-workbench.test.ts  conversation-workbench.tsx  github-link.tsx  how-it-works-link.tsx  topic-lookup.tsx  topic-search.test.ts  topic-search.tsx
apps/web/lib/: api.ts  styles.ts  types.ts
apps/web/topic/: analysis.ts  data.test.ts  data.ts  post-rendering.test.ts  post-rendering.ts  routes.test.ts  routes.ts  types.ts
current-state/: index.html
data/: topic_102383_posts.md  topic_102383_posts.txt
deploy/certs/: README.md
diagram-author-flow/: index.html
diagram-overview/: index.html
diagrams/: index.html
docker/backend/: Dockerfile
docker/frontend/: Caddyfile  Dockerfile
docs/: current-state.md  diagram-author-flow.md  diagram-overview.md  diagrams.md  index.md  json_tools.md  kirigami-vision.excalidraw  nlp-current.md  realworld.md  research-signals.md  researchers.md  systems_thinking.md  thread-radar-heuristic.md  tools.md  usecase.md  vision.md
ideas/: gather.py  requirements_bert_play.txt
json_tools/: index.html
kirigami/: __about__.py  __main__.py  api.py  ingest.py  kiri.py  pep.py  store.py  thread_analysis.py
kirigami/discourse/: __init__.py  client.py  export.py  fetch.py  people.py  resolve.py
kirigami/migrations/: 0000_initial_store.py  0002_import_topic_json_cache.py  0003_import_pep_json_cache.py  __init__.py
nlp-current/: index.html
notebooks/: 108.json  Untitled.ipynb  bert_play.ipynb  convokit_intro.ipynb  discourse-json.ipynb  discourse-play.ipynb  discourse-random.ipynb  discourse.ipynb  environ_nb.ipynb  finding_post_info.ipynb  httpx_finding_post_info.ipynb  pandas_explode_and_normalize.ipynb  pkg.json  requirements-nb.txt  sample.db  sample.json  using_gron.ipynb
notebooks/data/: pretty.json  topic_102383_posts.json
realworld/: index.html
research-signals/: index.html
researchers/: index.html
ruby_discourse/: Gemfile  testapi.rb
scripts/: deploy-web.sh  dev-web.sh  discourse_api_fetcher.py  discourse_data_summarizer.py  export-diagrams.sh
search/: search_index.json
src/kirigami/: __about__.py  __init__.py  __main__.py  api.py  cli.py  ingest.py  kiri.py  pep.py
src/kirigami/discourse/: __init__.py  client.py  export.py  fetch.py  resolve.py
src/kirigami/migrations/: 0001_import_people_cache.py
systems_thinking/: index.html
tests/: test_api.py  test_export_topic.py  test_fetch_topic_posts.py  test_people_cache.py  test_pep_metadata.py  test_resolve_pep_thread.py  test_store.py  test_thread_analysis.py
tests/jsondata/: categories.json  search_pep_751.json  stuff.json  topic_paginated.json  topic_paginated_batch2.json  topic_small.json
thread-radar-heuristic/: index.html
tools/: index.html
usecase/: index.html
vision/: index.html
