[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kirigami"
dynamic = ["version"]
description = 'Reorganize and cut text in a dialogue'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Carol Willing", email = "carolcode@willingconsulting.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/willingc/kirigami#readme"
Issues = "https://github.com/willingc/kirigami/issues"
Source = "https://github.com/willingc/kirigami"

[tool.hatch.version]
path = "src/kirigami/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/kirigami tests}"

[tool.coverage.run]
source_pkgs = ["kirigami", "tests"]
branch = true
parallel = true
omit = [
  "src/kirigami/__about__.py",
]

[tool.coverage.paths]
kirigami = ["src/kirigami", "*/kirigami/src/kirigami"]
tests = ["tests", "*/kirigami/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
