[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kirigami"
dynamic = ["version"]
description = 'Reorganize and cut text in a dialogue'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Carol Willing", email = "carolcode@willingconsulting.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "click",
  "click-default-group",
  "fastapi[standard]>=0.136",
  "flatten_json",
  "httpx",
  "json-flatten",
  "pydiscourse==1.7.0",
  "pyjanitor",
  "python-dotenv>=1.0.1",
  "requests>=2.34.2",
  "spacy>=3.8.14; python_version < '3.14'",
  "trogon",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]
notebooks = [
  "bert-extractive-summarizer",
  "convokit",
  "ipykernel",
  "jupyter",
  "matplotlib>=3.8.4",
  "nltk",
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "scipy>=1.13.0",
  "seaborn>=0.13.2",
  "spacy>=3.8.14; python_version < '3.14'",
  "transformers",
]

[project.scripts]
kiri = "kirigami.__main__:cli"

[project.urls]
Documentation = "https://github.com/willingc/kirigami#readme"
Issues = "https://github.com/willingc/kirigami/issues"
Source = "https://github.com/willingc/kirigami"

[tool.ruff]
extend-exclude = ["notebooks"]

[tool.fastapi]
entrypoint = "kirigami.api:app"

[tool.hatch.version]
path = "kirigami/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["kirigami"]
artifacts = ["kirigami/static/**"]

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:kirigami tests}"

[tool.coverage.run]
source_pkgs = ["kirigami", "tests"]
branch = true
parallel = true
omit = [
  "kirigami/__about__.py",
]

[tool.coverage.paths]
kirigami = ["kirigami"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
